@@ -2,7 +2,7 @@
 
 # Rename a PostgreSQL cluster
 #
-# (C) 2014-2019 Christoph Berg <myon@debian.org>
+# (C) 2014-2021 Christoph Berg <myon@debian.org>
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -43,6 +43,7 @@ error "specified cluster $version $oldcluster does not exist"
 error "target cluster $version $newcluster already exists"
     if (cluster_exists $version, $newcluster);
 my %info = cluster_info ($version, $oldcluster);
+validate_cluster_owner \%info;
 
 # stopping old cluster, so that we notice early when there are still
 # connections
